--- a/nextjs-frontend/src/styles/globals.css
+++ b/nextjs-frontend/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --white: #FFFFFF60;
+  --white: #FFFFFF80;
 }
 
 html, body {
@@ -28,7 +28,7 @@ html, body {
 
 
 .grayscale-tilelayer {
-  filter: sepia(100%) grayscale(70%) brightness(40%) contrast(100%)
+  filter: grayscale(100%) brightness(40%) contrast(100%)
 }
 
 .leaflet-control-attribution {
