--- a/nextjs-frontend/src/styles/globals.css
+++ b/nextjs-frontend/src/styles/globals.css
@@ -7,14 +7,10 @@
 }
 
 html, body {
+  overflow: hidden;
   padding: 0;
   margin: 0;
   color: #210b03;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
 }
 
 .leaflet-div-icon {
